--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
     <title>Dweeter App</title>
+
+    /* Jquery Library */
+    <script src="./js/jquery.js"></script>
+    
     /* Adding dweet.io js library */
     <script src="http://dweet.io/client/dweet.io.min.js"></script>
+
+    /* Twitter Bootstrap Links*/
+    <link href="./css/bootstrap.css" rel="stylesheet">
+    <link href="./css/bootstrap-flat.css" rel="stylesheet">
+    <link href="./css/custom.css" rel="stylesheet">
+    <script src="./js/bootstrap.min.js"></script>
 </head>
 <body>
 
